--- a/masters_thesis/thesis.bib
+++ b/masters_thesis/thesis.bib
@@ -51,11 +51,11 @@
     urldate={2018-11-09},
 }
 
-@online{llvm-writing-pass,
+@online{llvm-module-pass,
     author={LLVM},
     title="{LLVM’s Analysis and Transform Passes}",
     year={2018},
-    url={https://llvm.org/docs/Passes.html},
+    url={https://llvm.org/docs/WritingAnLLVMPass.html#the-modulepass-class},
     urldate={2018-11-09},
 }
 
@@ -66,6 +66,26 @@
     url={https://llvm.org/docs/CommandGuide/opt.html},
     urldate={2018-11-07},
 }
+
+@online{llvm-dbg,
+    author={LLVM},
+    title="{Source Level Debugging with LLVM}",
+    year={2018},
+    url={https://llvm.org/docs/SourceLevelDebugging.html#c-c-source-file-information},
+    urldate={2018-12-03},
+}
+
+@online{dg-github,
+    author={CHALUPA, Marek},
+    title="{Dependence graph for programs. Generic implementation of dependence
+    graphs with instantiation for LLVM that contains a static slicer for LLVM
+    bitcode}",
+    year={2018},
+    url={https://github.com/mchalupa/dg},
+    urldate={2018-12-03},
+}
+
+https://llvm.org/docs/SourceLevelDebugging.html
 
 % https://github.com/examon/APEX
 % https://github.com/mchalupa/dg/
