--- a/masters_thesis/thesis.tex
+++ b/masters_thesis/thesis.tex
@@ -183,7 +183,25 @@ You are heroes!
 \end{ThesisThanks}
 
 \begin{ThesisAbstract}
-    abstract TBA
+\begin{myItemize}
+\item{what is the problem?}
+Method for extraction of the subprogram from the original source code.
+
+\item{what is the solution of the problem?}
+What we do is based on the static analysis of the code and extracting
+relevant part of the program to the separate binary.
+Leveraging the LLVM infrastructure.
+
+\item{why is matters? why it is interesting?}
+Solution is implemented as a tool APEX. It can extract subprograms
+into standalone binaries.
+APEX can repeatedly run extracted part of the program without any other
+intermediary manual steps.
+
+\item{results}
+We have tested APEX on the set of 10 programs.
+
+\end{myItemize}
 \end{ThesisAbstract}
 
 \begin{ThesisKeyWords}
@@ -443,7 +461,7 @@ $$
 
 where:
 \begin{myItemize}
-\item \textbf{code} is a C program source code compiled into the llvm bytecode.
+\item \textbf{code} is a C program source code compiled into the llvm bitcode.
 \item \textbf{target} is an integer value representing line of code from the
 C program source code.
 \end{myItemize}
@@ -474,7 +492,7 @@ that are being called from these components.
 \end{myEnumerate}
 
 % what is the result of the method
-Upon completion of the steps mentioned above, the llvm bytecode is produced as
+Upon completion of the steps mentioned above, the llvm bitcode is produced as
 an \emph{output}.
 We can define \textbf{output} as the extracted part of the original program
 according to the \emph{source} and \emph{target} while keeping the consistency
@@ -1141,7 +1159,7 @@ entry:
 }
 \end{minted}
 
-% mod1 extracted graph
+% mod1 extracted grwaph
 \begin{figure}[ht]
     \centering
     \includegraphics[]{images/example_mod1/example_mod1_removing_done.pdf}
@@ -1362,94 +1380,254 @@ if.end:                                           ; preds = %if.then, %entry
 \end{figure}
 
 % === CHAPTER: Implementation ==================================================
-\chapter{Implementation: TODO}
+\chapter{Implementation:}
 \label{chap:implementation}
 
-%section
-\section{APEX}
+% === SECTION: APEXPass ========================================================
+\section{APEXPass}
+\label{sec:impl_apexpass}
 
-\subsection{what is APEX}
+% intro
+The method that we described in the \autoref{chap:design} is implemented as a
+LLVM pass called \textbf{APEXPass}.
+We have decided to implement the method as an pass because of the great
+capabilities of the LLVM infrastructure. Leveraging LLVM, APEXPass can be ran
+as an optimization step along with other LLVM optimizations or executed
+separately with LLMV optimizer tool opt:
 
-\subsection{two components of apex}
+\begin{minted}[frame=lines,framesep=10pt,breaklines]{bash}
+opt -o apex.bc -load libAPEXPass.so -apex -file=example.c -line=7 < example.bc 2> build/apex.log
+\end{minted}
+
+% apexpass input & output definition
+Using opt command presented above, APEXPass is ran via \textbf{apex} flag and defines
+two command line arguments: file and line.
+Argument \textbf{file} specifies the C source file where is the target located
+(in our case example.c) and argument \textbf{line} specifies number of the line
+in the file (in the example, line number 7).
+
+Input to the opt is the example.bc, which is the bitcode representation of the
+example.c with included source-level debug information. The reason why we need
+debug information included in the example.bc is explained in the
+\autoref{sec:impl_inst_locate}.
+
+We can get example.bc by compiling example.c using clang:
+
+\begin{minted}[frame=lines,framesep=10pt]{bash}
+clang -g -c -emit-llvm example.c -o example.bc
+\end{minted}
+
+Another necessary input to the opt is \textbf{libAPEXPass.so}. It is the pass
+itself compiled into the shared library. More information about the build
+process is discussed in the \autoref{sec:impl_launcher}.
+
+APEXPass produces output \textbf{apex.bc}, which is the bitcode representation
+of the extracted part from the example.bc.
+This extracted program can be executed directly with the tool lli as follows:
+
+\begin{minted}[frame=lines,framesep=10pt]{bash}
+lli apex.bc
+\end{minted}
+
+APEXPass can be defined within the LLVM framework as a \textbf{ModulPass}
+because it derives from the ModulePass class.\footnote{
+\url{https://llvm.org/doxygen/classllvm_1_1ModulePass.html}
+}
+
+There are other pass clases besides ModulePass (FunctionPass, LoopPass,
+RegionPass, BasicBlockPass, etc.), but we have decided to implement APEXPass as
+a ModulePass because it is the most general class of passes and thus provides
+the greatest flexibility.
+
+There are some disadvantages that comes to implementing pass as an ModulePass.
+To name a few, function bodies are are referred by no particular order sinde
+ModulePass handles entire program as a single unit. Also, there are no possible
+optimizations to be done for ModulePass because optimizer does not have enough
+information about behaviour of the ModulePass.\cite{llvm-module-pass}
+
+However, these disadvantages are not critical for our purposes and advantages
+of having whole program abstracted as a single unit outweigh the disadvantages.
+
+% === SUB-SECTION: APEXPass structure ==========================================
+\subsection{Structure of the APEXPass}
+
+In order to work correctly each ModulePass has to override runOnModule method
+with the following signature:
+
+\mintinline{C}{
+virtual bool runOnModule(Module &M) = 0;
+}
+
+This method is the main part of the pass and performs computation of the pass.
+All five steps that we described in the \autoref{sec:method_overview} are going
+to be part of the \mintinline{C}{runOnModule} method.
+In this section, we are going to explain
+additional, implementation specific steps (in bold) that needed to be added to
+the method.
+
+We add three additional steps the original five method steps described in the
+\autoref{sec:method_overview} (step 1, 7 and 8). We also explain implementation
+specific details behind step 2 in the subsequent subsection.
+
+The APEXPass structure therefore looks like this:
+
+% apexpass structure
+\begin{myItemize}
+\item{\mintinline{C}{runOnModule()}:}
+
 \begin{myEnumerate}
-\item launcher
-\item APEXPass
+\item{\textbf{Locate target instructions that map to the user input.}}
+\item \textbf{Run dg.} Compute data dependencies between instructions.
+\item Find connected components in the computed data dependencies inside
+every function.
+\item Construct call graph, mapping between connected components and functions
+that are being called from these components.
+\item Find path from source to target in the call graph.
+\item Eliminate dead components and functions that do not depend on the path.
+\item{\textbf{Inject exit and extract functions from apexlib into the code.}}
+\item{\textbf{Strip debug symbols from the extracted code.}}
 \end{myEnumerate}
 
-% section
+\end{myItemize}
+
+
+% === SUB-SECTION: Locating Target Instructions ================================
+\subsection{Locating Target Instructions}
+\label{sec:impl_inst_locate}
+
+Since APEXPass, or generally any LLVM pass, does not work directly with the C
+code but instead works with the LLVM IR, we need a procedure for mapping
+C source code to the IR.
+
+As we mentioned in the \autoref{sec:method_example}, we know precise position
+of the target in the example.c, but we do knot know exectly what IR
+instructions are equivalent to the target.
+
+Taking example from the \autoref{sec:method_example}, we have input program
+example.c and target in the function bar at the line 7.
+
+The target in the example.c is the following line of code:
+\mintinline{C}{int y = 42;}
+which is represented by the following IR instruction in the example.s:
+
+\mintinline{llvm}{
+store i32 42, i32* %y, align 4
+}
+
+The way we achieve mapping between original C source code and IR is by
+using source-level debug information that is introduced by the compiler
+(usually with the -g flag).
+The example.s with debug symbols is shown in the \autoref{appendix:example}.
+Once the example.s is compiled with debug information, we can iterate from within
+the APEXPass over each instruction to find out its parent file name and
+line number using the following code:\cite{llvm-dbg}
+
+\begin{minted}[frame=lines,framesep=10pt]{cpp}
+for (const auto &F : M) {
+    for (const auto &BB : F) {
+        for (const auto &I : BB) {
+            if (DILocation *Loc = I->getDebugLoc()) {
+                unsigned Line = Loc->getLine();
+                StringRef File = Loc->getFilename();
+            }
+        }
+    }
+}
+\end{minted}
+
+Once the Line and File match with the user input, we have found our target
+IR instruction. Note that there may be more IR instructions per one target
+(it depends on how complex the target is in the example.c).
+
+% === SUB-SECTION: Computing Data Dependencies With dg =========================
+\subsection{dg - Computing Data Dependencies}
+
+As we have mentioned in the \autoref{sec:design-dep}, we have not implemented
+data dependency computation in the APEXPass itself.
+Instead, we use open-source tool by Marek Chalupa called \textbf{dg}\footnote{
+\url{https://github.com/mchalupa/dg}
+}
+to compute data dependencies and get the results that we described in the
+\autoref{sec:design-dep}.
+
+\emph{Dg is a library which implements dependence graphs for programs. It
+contains a set of generic templates that can be specialized to user's needs.
+As a part of dg, you can find pointer analyses, reaching definitions analysis
+and a static slicer for LLVM.}\cite{dg-github}
+
+Since dg is extensive project that covers more than we need, we use just
+some parts of it, especially LLVMDependenceGraph. This structure provides
+data dependencies which APEXPass requires.
+
+% === SUB-SECTION: Injecting Exit and Extract Functions to the Code ============
+\subsection{Injecting Exit and Extract Functions}
+
+After having found the target instruction, we need to ensure that we get the
+data out of it and present it to the user. In order to accomplish this, we
+inject load instruction after the target. This way we load the value of the
+target into separate register and we use this register as an argument for the
+call to the dumping function that we inject right after.
+The last instruction that we inject at the end is call to exit, to ensure that
+the extracted program in apex.bc ends right after the target value is extracted.
+
+We disassemble bitcode contents of the apex.bc into human readable IR
+and save it into the apex.ll file using llvm-dis tool:
+
+\mintinline{bash}{
+    llvm-dis apex.bc -o apex.ll
+}
+
+The whole apex.ll with injected load and call instructions looks like this:
+
+\begin{minted}[label=apex.ll,frame=lines,framesep=10pt,linenos]{llvm}
+define i32 @bar() #0 {
+entry:
+  %y = alloca i32, align 4
+  store i32 42, i32* %y, align 4
+  %_apex_extract_int_arg = load i32, i32* %y
+  call void @_apex_extract_int(i32 %_apex_extract_int_arg)
+  call void @_apex_exit(i32 0)
+  %0 = load i32, i32* %y, align 4
+  ret i32 %0
+}
+
+define i32 @main() #0 {
+entry:
+  %bar_result = alloca i32, align 4
+  %call1 = call i32 @bar()
+  store i32 %call1, i32* %bar_result, align 4
+  ret i32 0
+}
+
+
+
+
+% === SUB-SECTION: Stripping Debug Symbols =====================================
+\subsection{Stripping Debug Symbols}
+
+
+% === SUB-SECTION: Limitations =================================================
+\subsection{Limitations}
+
+%\subsection{Terminator Instructions}
+
+% === SECTION: Launcher ========================================================
 \section{Launcher}
+\label{sec:impl_launcher}
 
-\subsection{compiling input to bytecode with dbg symbols}
+\footnote{
+\url{https://github.com/examon/APEX}
+}
 
-\subsection{running basic opts}
 
-\subsection{linking input with apexlib}
+\subsection{compiling apexlib and linking input with apexlib and produce bitcode}
 
-\subsection{running apexpass}
+\subsection{running apexpass with opt}
 
 \subsection{exporting call graph, dependency graph, disassembly bc}
 
-\subsection{running final binaries}
+\subsection{running final binaries, save result and logs}
 
-% section
-\section{APEXPass}
-
-\subsection{User Inpur Parsing, Mapping C code to IR}
-
-\subsection{Compute data dependencies between instructions.}
-- running dg, init apexdg
-
-\subsection{Find connected components in the apexdg.}
-
-\subsection{Construct call graph, mapping between connected components and functions
-that are being called from these components.}
-
-\subsection{Find path from source to target in the call graph.}
-
-\subsection{Eliminate dead components and functions that do not depend on the path.}
-The simplest and seemingly correct way would be to remove every connected
-component that is not part of the path that we calculated in the earlier
-chapter.
-
-This approach would unfortunately produce inconsistent IR. It not enough to
-remove only components in the path. We need to include every other component
-that is dependent on any other component that is already part of the path.
-
-Checking if we have any branching dependent on the @path
-\begin{myEnumerate}
-\item investigating block, collecting basic blocks
-\item block has no instruction in "if.*" basic block
-\item block has some instruction in "if.*" basic block
-\item Find branch instruction that services this BB and add block associated with this branch instruction to the @path.
-\end{myEnumerate}
-
-Computing what dependency blocks we want to keep
-\begin{myEnumerate}
-\item marking every block from @path as to keep
-\item Mark as visited to make sure we do not process this block in BFS.
-\item setting up initial queue for BFS search
-\item Go over @path and figure out if there are any calls outside the @path. If there
-are, put those called blocks for investigation into the @queue.
-\item running BFS
-\item Run BFS from queue and add everything for keeping that is not visited.
-\item Collecting everything that we do not want to keep
-\item We store blocks and functions that we want to remove into sets.
-\end{myEnumerate}
-
-Removing unwanted blocks
-\begin{myEnumerate}
-\item Remove instructions that we stored earier. Watch out for terminators (do not
-remove them).
-\item Do not erase instruction that is inside target instructions (We need those
-instructions intact.)
-\end{myEnumerate}
-
-\subsection{Injecting extraction and exit}
-
-\subsection{Recompilation, stripping debug symbols}
-
-%section
-\section{Recompilation back to the executable}
 
 % === CHAPTER: Experiments =====================================================
 \chapter{Experiments: TODO}
@@ -1566,7 +1744,7 @@ programs.
 
 
 
-% === CHAPTER ==================================================================
+% === APPENDIX: example.s ======================================================
 \chapter{\mintinline{text}{example.s}}
 \label{appendix:example}
 
@@ -1625,8 +1803,111 @@ attributes #0 = { noinline nounwind optnone uwtable "correctly-rounded-divide-sq
 \end{minted}
 
 
+% === APPENDIX: example.s dbg ==================================================
+\chapter{example.s - With Debug Symbols}
+\label{appendix:example}
 
 
+\begin{minted}[frame=lines, framesep=10pt, breaklines,linenos]{llvm}
+; ModuleID = 'example.bc'
+source_filename = "example.c"
+target datalayout = "e-m:e-i64:64-f80:128-n8:16:32:64-S128"
+target triple = "x86_64-unknown-linux-gnu"
+
+; Function Attrs: noinline nounwind optnone uwtable
+define i32 @foo(i32 %n) #0 !dbg !7 {
+entry:
+  %n.addr = alloca i32, align 4
+  %x = alloca i32, align 4
+  store i32 %n, i32* %n.addr, align 4
+  call void @llvm.dbg.declare(metadata i32* %n.addr, metadata !11, metadata !12), !dbg !13
+  call void @llvm.dbg.declare(metadata i32* %x, metadata !14, metadata !12), !dbg !15
+  %0 = load i32, i32* %n.addr, align 4, !dbg !16
+  %add = add nsw i32 %0, 10, !dbg !17
+  store i32 %add, i32* %x, align 4, !dbg !15
+  %1 = load i32, i32* %x, align 4, !dbg !18
+  ret i32 %1, !dbg !19
+}
+
+; Function Attrs: nounwind readnone speculatable
+declare void @llvm.dbg.declare(metadata, metadata, metadata) #1
+
+; Function Attrs: noinline nounwind optnone uwtable
+define i32 @bar() #0 !dbg !20 {
+entry:
+  %y = alloca i32, align 4
+  call void @llvm.dbg.declare(metadata i32* %y, metadata !23, metadata !12), !dbg !24
+  store i32 42, i32* %y, align 4, !dbg !24
+  %0 = load i32, i32* %y, align 4, !dbg !25
+  ret i32 %0, !dbg !26
+}
+
+; Function Attrs: noinline nounwind optnone uwtable
+define i32 @main() #0 !dbg !27 {
+entry:
+  %retval = alloca i32, align 4
+  %some_int = alloca i32, align 4
+  %foo_result = alloca i32, align 4
+  %bar_result = alloca i32, align 4
+  store i32 0, i32* %retval, align 4
+  call void @llvm.dbg.declare(metadata i32* %some_int, metadata !28, metadata !12), !dbg !29
+  store i32 10, i32* %some_int, align 4, !dbg !29
+  call void @llvm.dbg.declare(metadata i32* %foo_result, metadata !30, metadata !12), !dbg !31
+  %0 = load i32, i32* %some_int, align 4, !dbg !32
+  %call = call i32 @foo(i32 %0), !dbg !33
+  store i32 %call, i32* %foo_result, align 4, !dbg !31
+  call void @llvm.dbg.declare(metadata i32* %bar_result, metadata !34, metadata !12), !dbg !35
+  %call1 = call i32 @bar(), !dbg !36
+  store i32 %call1, i32* %bar_result, align 4, !dbg !35
+  ret i32 0, !dbg !37
+}
+
+attributes #0 = { noinline nounwind optnone uwtable "correctly-rounded-divide-sqrt-fp-math"="false" "disable-tail-calls"="false" "less-precise-fpmad"="false" "no-frame-pointer-elim"="true" "no-frame-pointer-elim-non-leaf" "no-infs-fp-math"="false" "no-jump-tables"="false" "no-nans-fp-math"="false" "no-signed-zeros-fp-math"="false" "no-trapping-math"="false" "stack-protector-buffer-size"="8" "target-cpu"="x86-64" "target-features"="+fxsr,+mmx,+sse,+sse2,+x87" "unsafe-fp-math"="false" "use-soft-float"="false" }
+attributes #1 = { nounwind readnone speculatable }
+
+!llvm.dbg.cu = !{!0}
+!llvm.module.flags = !{!3, !4, !5}
+!llvm.ident = !{!6}
+
+!0 = distinct !DICompileUnit(language: DW_LANG_C99, file: !1, producer: "clang version 5.0.1 (tags/RELEASE_500/final)", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !2)
+!1 = !DIFile(filename: "example.c", directory: "/mnt/Documents/work/university/muni/msc/thesis/APEX/examples/example")
+!2 = !{}
+!3 = !{i32 2, !"Dwarf Version", i32 4}
+!4 = !{i32 2, !"Debug Info Version", i32 3}
+!5 = !{i32 1, !"wchar_size", i32 4}
+!6 = !{!"clang version 5.0.1 (tags/RELEASE_500/final)"}
+!7 = distinct !DISubprogram(name: "foo", scope: !1, file: !1, line: 1, type: !8, isLocal: false, isDefinition: true, scopeLine: 1, flags: DIFlagPrototyped, isOptimized: false, unit: !0, variables: !2)
+!8 = !DISubroutineType(types: !9)
+!9 = !{!10, !10}
+!10 = !DIBasicType(name: "int", size: 32, encoding: DW_ATE_signed)
+!11 = !DILocalVariable(name: "n", arg: 1, scope: !7, file: !1, line: 1, type: !10)
+!12 = !DIExpression()
+!13 = !DILocation(line: 1, column: 13, scope: !7)
+!14 = !DILocalVariable(name: "x", scope: !7, file: !1, line: 2, type: !10)
+!15 = !DILocation(line: 2, column: 9, scope: !7)
+!16 = !DILocation(line: 2, column: 13, scope: !7)
+!17 = !DILocation(line: 2, column: 15, scope: !7)
+!18 = !DILocation(line: 3, column: 12, scope: !7)
+!19 = !DILocation(line: 3, column: 5, scope: !7)
+!20 = distinct !DISubprogram(name: "bar", scope: !1, file: !1, line: 6, type: !21, isLocal: false, isDefinition: true, scopeLine: 6, flags: DIFlagPrototyped, isOptimized: false, unit: !0, variables: !2)
+!21 = !DISubroutineType(types: !22)
+!22 = !{!10}
+!23 = !DILocalVariable(name: "y", scope: !20, file: !1, line: 7, type: !10)
+!24 = !DILocation(line: 7, column: 9, scope: !20)
+!25 = !DILocation(line: 8, column: 12, scope: !20)
+!26 = !DILocation(line: 8, column: 5, scope: !20)
+!27 = distinct !DISubprogram(name: "main", scope: !1, file: !1, line: 11, type: !21, isLocal: false, isDefinition: true, scopeLine: 11, flags: DIFlagPrototyped, isOptimized: false, unit: !0, variables: !2)
+!28 = !DILocalVariable(name: "some_int", scope: !27, file: !1, line: 12, type: !10)
+!29 = !DILocation(line: 12, column: 9, scope: !27)
+!30 = !DILocalVariable(name: "foo_result", scope: !27, file: !1, line: 13, type: !10)
+!31 = !DILocation(line: 13, column: 9, scope: !27)
+!32 = !DILocation(line: 13, column: 26, scope: !27)
+!33 = !DILocation(line: 13, column: 22, scope: !27)
+!34 = !DILocalVariable(name: "bar_result", scope: !27, file: !1, line: 14, type: !10)
+!35 = !DILocation(line: 14, column: 9, scope: !27)
+!36 = !DILocation(line: 14, column: 22, scope: !27)
+!37 = !DILocation(line: 16, column: 5, scope: !27)
+\end{minted}
 
 % === END ======================================================================
 \end{document}
